--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -17,10 +19,10 @@
 <body>
     <header>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg dalany-color-white fixed-top ">
+        <nav class="navbar navbar-expand-lg fixed-top ">
             <div class=" container-fluid ">
-                <a class="navbar-brand text-dalany" href="#"><img id="icono" class="w-25 m-0 p-0 "
-                        src="./assets/imgs/DALANY-logo.ico" alt="">Dalany Foundation
+                <a class="navbar-brand text-dalany2 " href="#"><img id="icono" class="w-25 m-0 p-0 "
+                        src="./assets/imgs/icono2.ico" alt="">Dalany Foundation
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                     aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,13 +32,13 @@
                 <div class=" collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll " style="--bs-scroll-height: 100px;">
                         <li class="nav-item  ">
-                            <a class="nav-link text-dalany " aria-current="page" href="#">Home</a>
+                            <a class="nav-link text-dalany2 " aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dalany " href="#">About us</a>
+                            <a class="nav-link text-dalany2 " href="#">About us</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link  text-dalany dropdown-toggle" href="#" role="button"
+                            <a class="nav-link  text-dalany2 dropdown-toggle" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Services
                             </a>
@@ -46,21 +48,22 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item text-dalany " href="#">Something else here</a></li>
+                                <li><a class="dropdown-item text-dalany2 " href="#">Something else here</a></li>
                             </ul>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link text-dalany " href="#" aria-disabled="true">Contact us</a>
+                            <a class="nav-link text-dalany2 " href="#" aria-disabled="true">Contact us</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-light text-dalany3" type="submit">Search</button>
                     </form>
                 </div>
             </div>
         </nav>
         <!-- end navbar -->
+
     </header>
     <!-- carrusel -->
     <section class="z-0 ">
@@ -69,12 +72,7 @@
                 <div class="carousel-item active">
                     <img src="./assets/imgs/img1.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item ">
-                    <img src="./assets/imgs/img2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/imgs/img3.jpg" class="d-block w-100" alt="...">
-                </div>
+
                 <div class="carousel-item">
                     <img src="./assets/imgs/img4.jpg" class="d-block w-100" alt="...">
                 </div>
@@ -147,7 +145,7 @@
                     <div>
                         <img src="https://picsum.photos/700/700" class=" img-striking" alt="" />
                     </div>
-                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany2">
+                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany3">
                         <h2>Magna primis lobortis<br />
                             sed ullamcorper
                         </h2>
@@ -166,7 +164,7 @@
                     <div>
                         <img src="https://picsum.photos/600/600" class=" img-striking" alt="" />
                     </div>
-                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany2">
+                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany3">
                         <h2>Magna primis lobortis<br />
                             sed ullamcorper
                         </h2>
@@ -182,7 +180,7 @@
                     <div>
                         <img src="https://picsum.photos/600/700" class=" img-striking" alt="" />
                     </div>
-                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany2">
+                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany3">
                         <h2>Magna primis lobortis<br />
                             sed ullamcorper
                         </h2>
@@ -260,6 +258,196 @@
         </section>
 
 
+        <!-- section three -->
+        <section id="about" class="s-about target-section">
+            <!-- features -->
+            <div class="s-about__features">
+
+                <div class="row section-header" data-num="03">
+                    <div class="column lg-6 stack-on-1000 title-block">
+                        <h2 class="title text-display-1">The Best Features of The App.</h2>
+                    </div>
+                    <div class="column lg-6 stack-on-1000 desc-block">
+                        <p class="desc lead">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, sit pretium,
+                            proin sed massa maecenas tempus, nibh. Ultrices pellentesque amet tristique
+                            feugiat condimentum integer fames.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row s-about__feature-list block-lg-one-third">
+
+                    <div class="column s-about__feature-item">
+                        <div class="s-about__feature-icon-block">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                                <path
+                                    d="M18.944 11.112C18.507 7.67 15.56 5 12 5 9.244 5 6.85 6.611 5.757 9.15 3.609 9.792 2 11.82 2 14c0 2.757 2.243 5 5 5h11c2.206 0 4-1.794 4-4a4.01 4.01 0 0 0-3.056-3.888zM18 17H7c-1.654 0-3-1.346-3-3 0-1.404 1.199-2.756 2.673-3.015l.581-.102.192-.558C8.149 8.274 9.895 7 12 7c2.757 0 5 2.243 5 5v1h1c1.103 0 2 .897 2 2s-.897 2-2 2z">
+                                </path>
+                            </svg>
+                        </div>
+                        <div class="s-about__feature-text">
+                            <h3 class="h5">Cloud Based</h3>
+                            <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
+                                Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque
+                                veritatis.
+                                Sunt suscipit voluptas ipsa in tempora esse soluta sint aliquam rhoncus elit.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="column s-about__feature-item">
+                        <div class="s-about__feature-icon-block">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                                <path
+                                    d="M18 7c0-1.103-.897-2-2-2H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-3.333L22 17V7l-4 3.333V7zm-1.998 10H4V7h12l.001 4.999L16 12l.001.001.001 4.999z">
+                                </path>
+                            </svg>
+                        </div>
+                        <div class="s-about__feature-text">
+                            <h3 class="h5">Voice & Video</h3>
+                            <p>Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est. Quis risus sed
+                                vulputate
+                                odio ut. Lectus arcu bibendum at varius vel. Lorem ipsum dolor sit amet consectetur
+                                adipiscing
+                                elit pellentesque. In nulla posuere sollicitudin aliquam ultrices.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="column s-about__feature-item">
+                        <div class="s-about__feature-icon-block">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                                <path
+                                    d="M20.995 6.9a.998.998 0 0 0-.548-.795l-8-4a1 1 0 0 0-.895 0l-8 4a1.002 1.002 0 0 0-.547.795c-.011.107-.961 10.767 8.589 15.014a.987.987 0 0 0 .812 0c9.55-4.247 8.6-14.906 8.589-15.014zM12 19.897C5.231 16.625 4.911 9.642 4.966 7.635L12 4.118l7.029 3.515c.037 1.989-.328 9.018-7.029 12.264z">
+                                </path>
+                                <path d="m11 12.586-2.293-2.293-1.414 1.414L11 15.414l5.707-5.707-1.414-1.414z"></path>
+                            </svg>
+                        </div>
+                        <div class="s-about__feature-text">
+                            <h3 class="h5">Always Secure</h3>
+                            <p>Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Eu scelerisque
+                                felis
+                                imperdiet proin fermentum leo. Cursus turpis massa tincidunt dui. Quis commodo odio
+                                aenean sed
+                                adipiscing diam donec adipiscing. Congue mauris rhoncus elit.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="column s-about__feature-item">
+                        <div class="s-about__feature-icon-block">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+                                style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                                <path
+                                    d="M22 8.65A5 5 0 0 0 17 4H7a5 5 0 0 0-5 4.74A2 2 0 0 0 2 9v7.5A3.48 3.48 0 0 0 5.5 20c1.43 0 2.32-1.06 3.19-2.09.32-.37.65-.76 1-1.1a4.81 4.81 0 0 1 1.54-.75 6.61 6.61 0 0 1 1.54 0 4.81 4.81 0 0 1 1.54.75c.35.34.68.73 1 1.1.87 1 1.76 2.09 3.19 2.09a3.48 3.48 0 0 0 3.5-3.5V9a2.09 2.09 0 0 0 0-.26zm-2 7.85a1.5 1.5 0 0 1-1.5 1.5c-.5 0-1-.64-1.66-1.38-.34-.39-.72-.85-1.15-1.26a6.68 6.68 0 0 0-2.46-1.25 6.93 6.93 0 0 0-2.46 0 6.68 6.68 0 0 0-2.46 1.25c-.43.41-.81.87-1.15 1.26C6.54 17.36 6 18 5.5 18A1.5 1.5 0 0 1 4 16.5V9a.77.77 0 0 0 0-.15A3 3 0 0 1 7 6h10a3 3 0 0 1 3 2.72v.12A.86.86 0 0 0 20 9z">
+                                </path>
+                                <circle cx="16" cy="12" r="1"></circle>
+                                <circle cx="18" cy="10" r="1"></circle>
+                                <circle cx="16" cy="8" r="1"></circle>
+                                <circle cx="14" cy="10" r="1"></circle>
+                                <circle cx="8" cy="10" r="2"></circle>
+                            </svg>
+                        </div>
+                        <div class="s-about__feature-text">
+                            <h3 class="h5">Play Games</h3>
+                            <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
+                                Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque
+                                veritatis.
+                                Sunt suscipit voluptas ipsa in tempora esse soluta sint donec adipiscing.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="column s-about__feature-item">
+                        <div class="s-about__feature-icon-block">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                                <path
+                                    d="M16 2H8C4.691 2 2 4.691 2 8v12a1 1 0 0 0 1 1h13c3.309 0 6-2.691 6-6V8c0-3.309-2.691-6-6-6zm4 13c0 2.206-1.794 4-4 4H4V8c0-2.206 1.794-4 4-4h8c2.206 0 4 1.794 4 4v7z">
+                                </path>
+                                <circle cx="9.5" cy="11.5" r="1.5"></circle>
+                                <circle cx="14.5" cy="11.5" r="1.5"></circle>
+                            </svg>
+                        </div>
+                        <div class="s-about__feature-text">
+                            <h3 class="h5">Group Chat</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna. Lectus
+                                vestibulum
+                                mattis ullamcorper velit sed ullamcorper morbi. Sit amet aliquam.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="column s-about__feature-item">
+                        <div class="s-about__feature-icon-block">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                                <path d="M16 12h2v4h-2z"></path>
+                                <path
+                                    d="M20 7V5c0-1.103-.897-2-2-2H5C3.346 3 2 4.346 2 6v12c0 2.201 1.794 3 3 3h15c1.103 0 2-.897 2-2V9c0-1.103-.897-2-2-2zM5 5h13v2H5a1.001 1.001 0 0 1 0-2zm15 14H5.012C4.55 18.988 4 18.805 4 18V8.815c.314.113.647.185 1 .185h15v10z">
+                                </path>
+                            </svg>
+                        </div>
+                        <div class="s-about__feature-text">
+                            <h3 class="h5">Payments</h3>
+                            <p>Nullam eget felis eget nunc. Adipiscing commodo elit at imperdiet dui accumsan.
+                                Condimentum
+                                mattis pellentesque id nibh tortor id aliquet lectus proin. Orci eu lobortis elementum
+                                nibh
+                                tellus. Tortor vitae purus faucibus ornare suspendisse.
+                            </p>
+                        </div>
+                    </div>
+
+                </div> <!-- end features-list -->
+
+            </div> <!-- end features -->
+        </section>
+
+
+        <!-- Contact Us -->
+        <section class="s-contact-us">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2 class="h1">Contact Us</h2>
+                        <p>
+                            If you have any questions, need help, or want to join our team, please don't hesitate to
+                            contact us.
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control" id="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea class="form-control" id="message" rows="3" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+
+                        </form>
+                        <!-- end contact form -->
+                    </div> <!-- end contact us col -->
+                </div> <!-- end row -->
+
+            </div> <!-- end container -->
+
+
+        </section>
+        <!-- end contact us -->
+
+
+
     </main>
     <!-- end main -->
 
@@ -302,7 +490,15 @@
                     </ul>
                 </div>
             </div>
-            <p class="text-center ">Dalany Foundation &copy; 2025</p>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="h6">
+                        &copy; 2025 Dalany Foundation. All rights reserved. Designed by <a
+                            href="https://www.linkedin.com/in/jean-carlos-augusto-brito-cuesta/"
+                            target="_blank">JkDev</a>
+                    </p>
+                </div>
+            </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
